force-app/main/default/objects/PBS_RSAP_Additional_Tax_Parcel_Info__c/PBS_RSAP_Additional_Tax_Parcel_Info__c.object-meta.xml
<CustomObject>
    <label>Additional Tax Parcel Information</label>
    <nameField>
        <displayFormat>ATPI-{0000000000}</displayFormat>
        <label>Additional Tax Parcel Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Tax Parcel Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>