force-app/main/default/objects/PBS_RSAP_Additional_Tax_Parcel_Info__c/fields/PBS_RSAP_Building_Number__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Building_Number__c</fullName>
    <label>Building Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>