force-app/main/default/objects/PBS_RSAP_Additional_Tax_Parcel_Info__c/fields/PBS_RSAP_Sub_Tax_Parcel_Building_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Sub_Tax_Parcel_Building_ID__c</fullName>
    <label>Sub Tax Parcel Building ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>