force-app/main/default/objects/PBS_RSAP_Additional_Tax_Parcel_Info__c/fields/PBS_RSAP_Sub_Tax_Parcel_Building_RSF__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Sub_Tax_Parcel_Building_RSF__c</fullName>
    <label>Sub Tax Parcel Building RSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>