force-app/main/default/objects/PBS_RSAP_Additional_Tax_Parcel_Info__c/fields/PBS_RSAP_Sub_Tax_Parcel_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>PBS_RSAP_Sub_Tax_Parcel_ID_Number__c</fullName>
    <label>Sub Tax Parcel ID Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>